--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ anyhow = "1.0.68"
 ark-std = { version = "0.3.0", features = ["print-trace"] }
 downcast-rs = "1.2.0"
 env_logger = "0.9.3"
-halo2aggregator-s = { git = "https://github.com/DelphinusLab/halo2aggregator-s.git", branch="main", features = ["unsafe"] }
+halo2aggregator-s = { git = "https://github.com/hyperoracle/halo2aggregator-s.git", branch="develop", features = ["unsafe"] }
 halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }
 halo2ecc-s = { git = "https://github.com/lanbones/halo2ecc-s.git", tag = "bisect-lookup-0.3.3" }
 ff = "0.12"
@@ -51,6 +51,6 @@ cuda = ["halo2_proofs/cuda"]
 [profile.dev]
 opt-level = 3
 
-#[patch.'https://github.com/junyu0312/halo2']
-#halo2_proofs = { path = './halo2/halo2_proofs' }
+[patch.'https://github.com/DelphinusLab/halo2-gpu-specific.git']
+halo2_proofs = {git = "https://github.com/hyperoracle/halo2-gpu-specific.git"}
 
